# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  02 Dec 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-server/files/authorization.xml:
  Bump to vmware-any-any-update115.
  Remove need for any-any in server-1,2, workstation-6, player-2.
  Add in initial (but not really usable) vmware server-2 beta.

  26 Nov 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild:
  Ensure default scripts are installed and executable.

  25 Nov 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-player/files/vmware-player.rc,
  app-emulation/vmware-server/files/vmware-server.rc,
  app-emulation/vmware-workstation/files/vmware-workstation.rc:
  Synchronize with the main portage tree.

  24 Nov 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild,
  app-emulation/vmware-modules/vmware-modules-1.0.0.17.ebuild:
  Fix the manifests for vmware-any-any-update114, and put in the latest
  open-vm-tools.

  24 Oct 2007; Mike Auty <ikelos@gentoo.org> ++, ++, ++,
  -app-emulation/vmware-player/files/2.0.1.55017/000_all_initd-location.patc
  h,
  -app-emulation/vmware-workstation/files/6.0.1.55017/000_all_initd-location
  .patch, ++,
  -app-emulation/vmware-player/files/2.0.1.55017/001_all_fix-permissions.pat
  ch,
  -app-emulation/vmware-player/files/2.0.1.55017/002_all_pagebreak-detection
  -fix.patch,
  -app-emulation/vmware-player/files/2.0.1.55017/004_all_do-not-build-module
  s.patch,
  -app-emulation/vmware-player/files/2.0.1.55017/007_all_use-modprobe-over-i
  nsmod.patch,
  -app-emulation/vmware-player/files/2.0.1.55017/009_all_init.d-modules-warn
  ing.patch,
  -app-emulation/vmware-player/files/2.0.1.55017/011_all_legit-modules-only.
  patch,
  -app-emulation/vmware-workstation/files/6.0.1.55017/001_all_fix-permission
  s.patch,