@@ -3,9 +3,5 @@ AUX open-vm.confd 88 RMD160 5e398024e72a871f258d73e09f02e37a815443b0 SHA1 56133c
 AUX open-vm.initd 1758 RMD160 49d9bf6d72cce10fc2582e595c4015a827f9f612 SHA1 749727f8fa5dd6f1efb5215c3df4b3024f0a2d75 SHA256 c0a4d69784e833be89908e2a9ef4221da46c13f6a8a8b37e7f4a29a138d35a7d
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
-DIST open-vm-tools-2007.09.04-56574.tar.gz 1987725 RMD160 8bb9952471ff5635e70741afd357170b6c0a8307 SHA1 d3ffcd974e67b5f83b760582f8c2606721d94403 SHA256 4e4a5c805ffcbcf8de9deca9b96dd874d2be405a994729a4becf3501b73b46bc
-DIST open-vm-tools-2007.10.08-SNAPSHOT.tar.gz 2419956 RMD160 2f4de4b8f47866bbcbc8f846b3d835db736d1adc SHA1 b4ff62ddfde889898de779a2670f19438090aa7f SHA256 81a55d15c080131d160598b4ec34003d3f66680c06f574fc2435f8fd3bed2359
 DIST open-vm-tools-2007.11.21-64693.tar.gz 2295022 RMD160 e166040e713f4b7f8fae835862128a7ec3fdca75 SHA1 5b5e8edd726a997e3db0585af010a4be3405cc67 SHA256 b00530bf578b07127880ad3107b2b98873d3e5f74876dd94644bac3883be4431
-EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3793 RMD160 832f2aee5ac13bd9ef4d4832ba2e5d04ef10c6fd SHA1 8ee7b49789a7c24c19072ca97fdd4e7597ca919f SHA256 09dc189ef719ab31a376e8c18e25770241097d235a5c229454050880befb92fc
-EBUILD open-vm-tools-0.0.20071008.99999.ebuild 3705 RMD160 298bcb5016af5057de7a36c079b1daf80bba6847 SHA1 9a02ca469f00a12446e5abab6d22c9c3f78ce038 SHA256 e50e155d7425bc1f74f5fb45ca031854f11a0c2cacc9d592f88f071bf65dad8e
-EBUILD open-vm-tools-0.0.20071121.64693.ebuild 3881 RMD160 53f30e4ddce58c04d79ea2a5b39feb4f308d7d0e SHA1 72fe4e2250b5df334814e3b03e4a66636288f3a6 SHA256 565ca67846b5efaa55f3f38c3813dd21c5ff20109fb2e75ad0ddeb976df310c2
+EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 4067 RMD160 6e497829bee9b39f562ba6de6ef898594a9b0389 SHA1 31ec7422a1daf29cb572f2b197b6c5f88768b333 SHA256 8f5c261051edd66159b5a50e713afb3617d39d599ac6907de62152a3bc647d38
